Added Services and Data layers and created first migration of database

--- a/TheatreAPI/TheatreAPI/appsettings.json
+++ b/TheatreAPI/TheatreAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(LocalDb)\\MSSQLLocalDB;database=TheatreAppDb;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
