Added jwt functionality

--- a/TheatreAPI/TheatreAPI/appsettings.json
+++ b/TheatreAPI/TheatreAPI/appsettings.json
@@ -8,5 +8,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(LocalDb)\\MSSQLLocalDB;database=TheatreAppDb;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
+  "TokenKey": "secret secret secret key",
   "AllowedHosts": "*"
 }
