Added email-sender functionality

--- a/TheatreAPI/TheatreAPI/appsettings.json
+++ b/TheatreAPI/TheatreAPI/appsettings.json
@@ -2,8 +2,16 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "EmailConfiguration": {
+    "From": "noreplygatheredevents@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "noreplygatheredevents@gmail.com",
+    "Password": "cjaeuobjwnyxkzja"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(LocalDb)\\MSSQLLocalDB;database=TheatreAppDb;Integrated Security=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
